Fixed section align to the center of the page

--- a/Xiaomi_Himo_from_figma_mockup_to_html_css/css/style.css
+++ b/Xiaomi_Himo_from_figma_mockup_to_html_css/css/style.css
@@ -175,9 +175,7 @@ body {
 }
 
 .info {
-  width: 1120px;
   height: 1053px;
-  margin-top: 150px;
   margin-bottom: 150px;
 }
 
